Improved discovery protocol
